...
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title=" "/>
                                                <connections>
                                                    <action selector="contactBtnPress:" destination="BGY-m7-GxW" eventType="touchUpInside" id="ipS-Ik-48h"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tc7-8D-jQb">
                                                <rect key="frame" x="63.333333333333343" y="68.666666666666629" width="75" height="23"/>
                                                <fontDescription key="fontDescription" name="Inter-Bold" family="Inter" pointSize="19"/>
                                                <color key="textColor" name="vm_theame_color_white"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title=" "/>
                                                <connections>
                                                    <action selector="roomBtnPress:" destination="BGY-m7-GxW" eventType="touchUpInside" id="dof-LS-Igw"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rooms" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YMu-4E-hXn">
                                                <rect key="frame" x="68.666666666666657" y="68.666666666666629" width="63.666666666666657" height="23"/>
                                                <fontDescription key="fontDescription" name="Inter-Bold" family="Inter" pointSize="19"/>
                                                <color key="textColor" name="vm_theame_color_white"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dnc-B8-FlB">
                                        <rect key="frame" x="0.0" y="17" width="375" height="74"/>
                                        <subviews>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FR8-9W-hut">
                                                <rect key="frame" x="15" y="14" width="345" height="46"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Serach" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q37-Ca-SrJ">
                                                        <rect key="frame" x="15" y="6" width="320" height="34"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <outlet property="delegate" destination="BGY-m7-GxW" id="Nix-l1-A7C"/>
...
